--- a/Transaksiku/package.json
+++ b/Transaksiku/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/outfit": "^5.2.8",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-query": "^5.90.17",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.16"
   },
