--- a/Tugas/package.json
+++ b/Tugas/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.18"
   },
